Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Giới chức Greenland hoài nghi về việc phái đoàn Mỹ sắp thăm hòn đảo",
+    "content": "Giới chức Greenland bày tỏ sự hoài nghi và bất bình về chuyến thăm sắp tới của phái đoàn Mỹ, trong đó có phu nhân Phó Tổng thống Usha Vance và cố vấn an ninh quốc gia Michael Waltz. Họ cho rằng chuyến thăm này mang tính chất khiêu khích và không tôn trọng tình hình chính trị nội bộ của Greenland, đặc biệt trong bối cảnh hòn đảo vừa tổ chức bầu cử quốc hội. Tuy nhiên, chính quyền Mỹ khẳng định rằng chuyến thăm mang tính hữu nghị và nhằm tôn vinh văn hóa Greenland.",
+    "link": "https://dantri.com.vn/the-gioi/gioi-chuc-greenland-hoai-nghi-ve-viec-phai-doan-my-sap-tham-hon-dao-20250324081000244.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao giới chức Greenland lại hoài nghi về chuyến thăm của phái đoàn Mỹ?",
+    "answers": [
+      {
+        "text": "Vì họ coi đó là động thái khiêu khích và thiếu tôn trọng.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ muốn ngăn cản mối quan hệ với Mỹ.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không muốn có bất kỳ quan hệ nào với các nước khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thấy cần thiết có các cuộc thăm viếng quốc tế.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ sợ ảnh hưởng đến chính trị nội bộ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Dịch vụ việc làm cho 'mẹ bỉm sữa' ở Trung Quốc",
     "content": "Nhiều thành phố ở Trung Quốc đang triển khai dịch vụ việc làm linh hoạt dành cho các bà mẹ đang nuôi con nhỏ, nhằm giúp họ vừa kiếm tiền vừa có thời gian chăm sóc gia đình. Theo thống kê, tỷ lệ sinh ở Trung Quốc đã giảm liên tục trong 7 năm qua, buộc chính phủ phải đưa ra các chính sách hỗ trợ. Các công việc 'mother-friendly' giúp phụ nữ cân bằng công việc và trách nhiệm gia đình, đồng thời tạo ra môi trường làm việc thuận lợi cho họ. Nhiều công ty đã cung cấp hàng ngàn vị trí việc làm với giờ làm linh hoạt để thu hút các bà mẹ tham gia lực lượng lao động.",
     "link": "https://vnexpress.net/dich-vu-viec-lam-cho-me-bim-sua-o-trung-quoc-4864887.html",
@@ -493,6 +524,33 @@
       },
       {
         "text": "Tạo ra môi trường làm việc không thân thiện.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thủ tướng Canada chỉ trích Tổng thống Trump",
+    "content": "Thủ tướng Canada Mark Carney kêu gọi tổ chức bầu cử sớm vào ngày 28/4 nhằm đối phó với chính quyền của Tổng thống Mỹ Donald Trump. Ông Carney chỉ trích các biện pháp thương mại cứng rắn của ông Trump và nhấn mạnh rằng Canada không phải là một quốc gia \"không thực sự\" như ông Trump đã tuyên bố. Ông cũng bày tỏ quan ngại về khả năng một cuộc chiến tranh thương mại giữa hai nước và chỉ ra rằng Canada sẽ duy trì mức thuế quan cho đến khi Mỹ tôn trọng đất nước này.",
+    "link": "https://dantri.com.vn/the-gioi/thu-tuong-canada-chi-trich-tong-thong-trump-20250324074714271.htm",
+    "cat": "thoi-su",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Thủ tướng Canada đã chỉ trích điều gì về Tổng thống Trump?",
+    "answers": [
+      {
+        "text": "Các biện pháp thương mại cứng rắn của ông Trump",
+        "correct": true
+      },
+      {
+        "text": "Chính sách nhập cư của ông Trump",
+        "correct": false
+      },
+      {
+        "text": "Quyết định rút khỏi Hiệp định Paris",
+        "correct": false
+      },
+      {
+        "text": "Chương trình chăm sóc sức khỏe của ông Trump",
         "correct": false
       }
     ]
@@ -865,6 +923,33 @@
     ]
   },
   {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -891,33 +976,6 @@
       },
       {
         "text": "10 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -1116,33 +1174,6 @@
     ]
   },
   {
-    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
-    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
-    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
-    "answers": [
-      {
-        "text": "Trở thành công an hoặc bác sĩ",
-        "correct": true
-      },
-      {
-        "text": "Trở thành họa sĩ",
-        "correct": false
-      },
-      {
-        "text": "Trở thành cầu thủ bóng đá",
-        "correct": false
-      },
-      {
-        "text": "Trở thành nhạc sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
     "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
     "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
@@ -1165,6 +1196,33 @@
       },
       {
         "text": "Không có chương trình khuyến mãi nào",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
+    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
+    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
+    "answers": [
+      {
+        "text": "Trở thành công an hoặc bác sĩ",
+        "correct": true
+      },
+      {
+        "text": "Trở thành họa sĩ",
+        "correct": false
+      },
+      {
+        "text": "Trở thành cầu thủ bóng đá",
+        "correct": false
+      },
+      {
+        "text": "Trở thành nhạc sĩ",
         "correct": false
       }
     ]
@@ -2627,6 +2685,33 @@
     ]
   },
   {
+    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
+    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
+    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
+    "answers": [
+      {
+        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
+        "correct": true
+      },
+      {
+        "text": "Chanh, dưa hấu, xoài",
+        "correct": false
+      },
+      {
+        "text": "Cà chua, khoai tây, hành tây",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "5 quả giàu chất xơ giúp giảm cholesterol",
     "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
     "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
@@ -2680,33 +2765,6 @@
       },
       {
         "text": "Chơi trò chơi điện tử với bé",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
-    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
-    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
-    "answers": [
-      {
-        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
-        "correct": true
-      },
-      {
-        "text": "Chanh, dưa hấu, xoài",
-        "correct": false
-      },
-      {
-        "text": "Cà chua, khoai tây, hành tây",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, bắp cải, đậu xanh",
         "correct": false
       }
     ]
