--- a/home.html
+++ b/home.html
@@ -662,33 +662,6 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -715,6 +688,33 @@
       },
       {
         "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -886,28 +886,32 @@
     ]
   },
   {
-    "title": "Lối sống 'Tây hóa' đẩy nhanh ung thư đại tràng",
-    "content": "Bài viết đề cập đến việc lối sống 'Tây hóa' và thói quen ăn uống không lành mạnh đang làm gia tăng nguy cơ mắc ung thư đại tràng ở người trẻ tuổi tại Việt Nam. Nhiều ca mắc ung thư đại tràng đã được ghi nhận, trong đó có những bệnh nhân dưới 40 tuổi, do chế độ ăn nhiều thịt đỏ và thực phẩm chế biến sẵn. Các bác sĩ khuyến cáo việc thay đổi lối sống như ăn uống đầy đủ rau xanh, tập thể dục thường xuyên và sàng lọc định kỳ có thể giúp giảm nguy cơ mắc bệnh này.",
-    "link": "https://vnexpress.net/loi-song-tay-hoa-day-nhanh-ung-thu-dai-trang-4863063.html",
+    "title": "Ăn uống kém lành mạnh đẩy nhanh ung thư đại tràng",
+    "content": "Chị Mai, 40 tuổi, ở Hà Nội, đã bị chẩn đoán ung thư đại tràng giai đoạn cuối do thói quen ăn uống kém lành mạnh, bao gồm việc tiêu thụ thực phẩm thừa và chế biến lại nhiều lần. Các bác sĩ cho rằng chế độ ăn không hợp lý, với nhiều thịt đỏ và thực phẩm chế biến sẵn, đang ngày càng gia tăng nguy cơ mắc bệnh ung thư, đặc biệt là ở nhóm tuổi trẻ từ 30 đến 40. Thống kê từ Tổ chức Ung thư Thế giới cho thấy Việt Nam có hơn 14.000 ca mắc mới ung thư đại trực tràng mỗi năm, với xu hướng gia tăng ở những người trẻ tuổi. Bác sĩ khuyến cáo nên thay đổi lối sống, ăn nhiều rau củ và sàng lọc sức khỏe định kỳ để phát hiện sớm bệnh.",
+    "link": "https://vnexpress.net/an-uong-kem-lanh-manh-day-nhanh-ung-thu-dai-trang-4863063.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Lối sống nào đang làm gia tăng nguy cơ ung thư đại tràng ở người trẻ tại Việt Nam?",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Thói quen ăn uống nào có thể gây ung thư đại tràng?",
     "answers": [
       {
-        "text": "Lối sống 'Tây hóa' với thực phẩm chế biến sẵn",
+        "text": "Ăn nhiều thực phẩm chế biến sẵn và thịt đỏ",
         "correct": true
       },
       {
-        "text": "Lối sống truyền thống với nhiều rau quả",
+        "text": "Uống nhiều nước ngọt",
         "correct": false
       },
       {
-        "text": "Lối sống ít vận động và ăn nhiều trái cây",
+        "text": "Tập thể dục thường xuyên",
         "correct": false
       },
       {
-        "text": "Lối sống kiêng thịt hoàn toàn",
+        "text": "Ăn hoa quả ít hơn",
+        "correct": false
+      },
+      {
+        "text": "Ngủ không đủ giấc",
         "correct": false
       }
     ]
@@ -2451,6 +2455,33 @@
     ]
   },
   {
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "answers": [
+      {
+        "text": "Bơ, táo, lê, lựu, cam",
+        "correct": true
+      },
+      {
+        "text": "Chuối, dưa hấu, nho",
+        "correct": false
+      },
+      {
+        "text": "Xoài, dứa, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho khô, hạt chia, bưởi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -2477,33 +2508,6 @@
       },
       {
         "text": "Chơi trò chơi điện tử với bé",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -2648,32 +2652,28 @@
     ]
   },
   {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
     "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
     "answers": [
       {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
         "correct": true
       },
       {
-        "text": "Chỉ gây hại về mặt tâm lý.",
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
         "correct": false
       },
       {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
         "correct": false
       },
       {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -2733,28 +2733,32 @@
     ]
   },
   {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
     "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
     "answers": [
       {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
         "correct": true
       },
       {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "text": "Chỉ gây hại về mặt tâm lý.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
         "correct": false
       },
       {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -2984,33 +2988,6 @@
     ]
   },
   {
-    "title": "Nguyên nhân gây cứng khớp",
-    "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
-    "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Cứng khớp thường xảy ra do những nguyên nhân nào?",
-    "answers": [
-      {
-        "text": "Thoái hóa khớp, viêm khớp, và bệnh gout",
-        "correct": true
-      },
-      {
-        "text": "Chỉ do chấn thương",
-        "correct": false
-      },
-      {
-        "text": "Do chế độ ăn uống không đủ dinh dưỡng",
-        "correct": false
-      },
-      {
-        "text": "Chỉ do tuổi tác cao",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 món ăn người tiểu đường nên tránh",
     "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
     "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
@@ -3033,6 +3010,33 @@
       },
       {
         "text": "Chỉ uống nước ngọt không đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguyên nhân gây cứng khớp",
+    "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
+    "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Cứng khớp thường xảy ra do những nguyên nhân nào?",
+    "answers": [
+      {
+        "text": "Thoái hóa khớp, viêm khớp, và bệnh gout",
+        "correct": true
+      },
+      {
+        "text": "Chỉ do chấn thương",
+        "correct": false
+      },
+      {
+        "text": "Do chế độ ăn uống không đủ dinh dưỡng",
+        "correct": false
+      },
+      {
+        "text": "Chỉ do tuổi tác cao",
         "correct": false
       }
     ]
@@ -3188,33 +3192,6 @@
       },
       {
         "text": "25/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ăn bưởi giải rượu được không?",
-    "content": "Bưởi chứa nhiều vitamin C và chất xơ tốt cho sức khỏe, nhưng không nên ăn bưởi sau khi uống rượu vì hợp chất furanocoumarin trong bưởi có thể làm tăng độc tính của ethanol, gây hại cho cơ thể. Thay vào đó, người say rượu có thể uống dưa hấu, nước dừa, hoặc nước chanh pha mật ong để giải rượu. Mặc dù các biện pháp này giúp giảm các triệu chứng say, nhưng không thể loại bỏ hoàn toàn tác hại của rượu.",
-    "link": "https://vnexpress.net/an-buoi-giai-ruou-duoc-khong-4863742.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Ăn bưởi có giúp giải rượu không?",
-    "answers": [
-      {
-        "text": "Không, ăn bưởi sau khi uống rượu không tốt.",
-        "correct": true
-      },
-      {
-        "text": "Có, bưởi giúp giải rượu hiệu quả.",
-        "correct": false
-      },
-      {
-        "text": "Bưởi làm giảm say rượu nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Bưởi là thực phẩm nên ăn sau khi uống rượu.",
         "correct": false
       }
     ]
