Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,37 @@
     ]
   },
   {
+    "title": "Chàng trai liệt tứ chi sau ăn pate đóng hộp",
+    "content": "Một chàng trai 25 tuổi đã bị liệt tứ chi và không thể cử động mắt do ngộ độc botulinum sau khi ăn pate đóng hộp bảo quản không đúng cách. Sau hơn hai tháng điều trị tại Bệnh viện Quân y 175, anh đã dần hồi phục nhưng vẫn cần hỗ trợ thở máy. Ngộ độc botulinum có thể gây tử vong nếu không được phát hiện và điều trị kịp thời, và người bệnh cần được chăm sóc hỗ trợ trong nhiều tháng.",
+    "link": "https://vnexpress.net/chang-trai-liet-tu-chi-sau-an-pate-dong-hop-4864971.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Chàng trai bị bệnh gì sau khi ăn pate đóng hộp?",
+    "answers": [
+      {
+        "text": "Ngộ độc botulinum",
+        "correct": true
+      },
+      {
+        "text": "Viêm dạ dày",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng cấp tính",
+        "correct": false
+      },
+      {
+        "text": "Suy thận",
+        "correct": false
+      },
+      {
+        "text": "Cảm cúm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhập quốc tịch Singapore, nhà đất ở Việt Nam phải làm sao?",
     "content": "Bài viết đề cập đến vấn đề của một cặp vợ chồng Việt Nam đã nhập quốc tịch Singapore và đang sở hữu nhà đất tại Việt Nam. Luật sư Lê Văn Hoan giải thích rằng quyền sử dụng đất và tài sản gắn liền với đất vẫn được bảo hộ theo quy định của pháp luật Việt Nam, mặc dù họ đã chuyển đổi quốc tịch. Cặp đôi vẫn có quyền chuyển nhượng hoặc bán nhà đất của mình nếu không vi phạm các quy định pháp luật liên quan.",
     "link": "https://tuoitre.vn/nhap-quoc-tich-singapore-nha-dat-o-viet-nam-phai-lam-sao-20250306143041684.htm",
@@ -1151,28 +1182,28 @@
     ]
   },
   {
-    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
-    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
-    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
     "cat": "gia-dinh",
-    "positivity": 8,
+    "positivity": 3,
     "importance": 7,
-    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
     "answers": [
       {
-        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
         "correct": true
       },
       {
-        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
         "correct": false
       },
       {
-        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
         "correct": false
       },
       {
-        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
         "correct": false
       }
     ]
@@ -1209,33 +1240,6 @@
     ]
   },
   {
-    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
-    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
-    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
-    "answers": [
-      {
-        "text": "Vợ ông đang trong tình trạng nguy kịch.",
-        "correct": true
-      },
-      {
-        "text": "Vợ ông đã hồi phục hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
-        "correct": false
-      },
-      {
-        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
     "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
     "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
@@ -1258,6 +1262,33 @@
       },
       {
         "text": "Ngày Quốc tế Phụ nữ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
+    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
+    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
+    "answers": [
+      {
+        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
@@ -1406,28 +1437,28 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
+    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
+    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
     "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
     "answers": [
       {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
         "correct": true
       },
       {
-        "text": "Để xây dựng một cầu mới.",
+        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
         "correct": false
       },
       {
-        "text": "Để tổ chức lễ hội âm nhạc.",
+        "text": "Không có sự thay đổi nào đáng kể",
         "correct": false
       },
       {
-        "text": "Vì lý do an ninh quốc gia.",
+        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
         "correct": false
       }
     ]
@@ -1487,28 +1518,28 @@
     ]
   },
   {
-    "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
-    "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
-    "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
     "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quảng trường Đông Kinh Nghĩa Thục đã thay đổi như thế nào qua các thời kỳ?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
     "answers": [
       {
-        "text": "Từ bãi đất trống trở thành trung tâm giao thông và điểm đến du lịch",
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
         "correct": true
       },
       {
-        "text": "Luôn giữ nguyên hình dạng từ thời Pháp thuộc đến nay",
+        "text": "Để xây dựng một cầu mới.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào đáng kể",
+        "text": "Để tổ chức lễ hội âm nhạc.",
         "correct": false
       },
       {
-        "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
@@ -2917,28 +2948,28 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
+    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
+    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
     "answers": [
       {
-        "text": "Bơ, táo, lê, lựu, cam",
+        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
         "correct": true
       },
       {
-        "text": "Chuối, dưa hấu, nho",
+        "text": "Chanh, dưa hấu, xoài",
         "correct": false
       },
       {
-        "text": "Xoài, dứa, kiwi",
+        "text": "Cà chua, khoai tây, hành tây",
         "correct": false
       },
       {
-        "text": "Nho khô, hạt chia, bưởi",
+        "text": "Bông cải xanh, bắp cải, đậu xanh",
         "correct": false
       }
     ]
@@ -2975,28 +3006,28 @@
     ]
   },
   {
-    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
-    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
-    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
+    "question": "Những loại quả nào giúp giảm cholesterol?",
     "answers": [
       {
-        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
+        "text": "Bơ, táo, lê, lựu, cam",
         "correct": true
       },
       {
-        "text": "Chanh, dưa hấu, xoài",
+        "text": "Chuối, dưa hấu, nho",
         "correct": false
       },
       {
-        "text": "Cà chua, khoai tây, hành tây",
+        "text": "Xoài, dứa, kiwi",
         "correct": false
       },
       {
-        "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
