--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
+    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
+    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
+    "answers": [
+      {
+        "text": "Giữa tháng 3",
+        "correct": true
+      },
+      {
+        "text": "Đầu tháng 4",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 2",
+        "correct": false
+      },
+      {
+        "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tòa án hủy luận tội Thủ tướng Hàn Quốc",
     "content": "Tòa án Hiến pháp Hàn Quốc đã bác đơn luận tội đối với Thủ tướng Han Duck-soo, cho phép ông trở lại vị trí quyền Tổng thống. Quyết định này được đưa ra với 7 phiếu thuận và 1 phiếu chống, cho thấy không đủ chứng cứ để buộc tội ông vi phạm hiến pháp hoặc luật pháp liên quan đến lệnh thiết quân luật. Trước đó, ông Han đã bị đình chỉ chức vụ do mâu thuẫn với quốc hội và bị cáo buộc có vai trò trong việc ban hành thiết quân luật.",
     "link": "https://dantri.com.vn/the-gioi/toa-an-huy-luan-toi-thu-tuong-han-quoc-20250324090124986.htm",
@@ -1267,6 +1294,33 @@
     ]
   },
   {
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
+    "answers": [
+      {
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
+        "correct": true
+      },
+      {
+        "text": "Lễ hội mùa xuân",
+        "correct": false
+      },
+      {
+        "text": "Cuộc thi thể thao quốc gia",
+        "correct": false
+      },
+      {
+        "text": "Ngày Quốc tế Phụ nữ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -1320,33 +1374,6 @@
       },
       {
         "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -3257,33 +3284,6 @@
     ]
   },
   {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
-    "answers": [
-      {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư phổi có ăn thịt gà được không?",
     "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
     "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
@@ -3306,6 +3306,33 @@
       },
       {
         "text": "Có, nhưng chỉ ăn thịt gà chiên.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "answers": [
+      {
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
