Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Vì sao chứng khoán quay đầu giảm sau đợt tăng dài, nhà đầu tư đang lo gì?",
+    "content": "VN-Index đã giảm 0,32% trong tuần qua, đánh dấu tuần điều chỉnh đầu tiên sau 8 tuần tăng liên tiếp. Các chuyên gia cho rằng thị trường đang thận trọng với áp lực chốt lời gia tăng và sự thiếu vắng động lực mới. Dự báo VN-Index sẽ dao động trong biên độ 1.300 - 1.340 điểm, với khả năng kiểm tra lại ngưỡng hỗ trợ 1.300 điểm. Nhà đầu tư được khuyến nghị nên theo dõi động thái bán ròng từ khối ngoại và tìm kiếm cơ hội tích lũy cổ phiếu.",
+    "link": "https://tuoitre.vn/vi-sao-chung-khoan-quay-dau-giam-sau-dot-tang-dai-nha-dau-tu-dang-lo-gi-20250324094445369.htm",
+    "cat": "kinh-doanh",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao VN-Index lại giảm sau 8 tuần tăng liên tiếp?",
+    "answers": [
+      {
+        "text": "Do áp lực chốt lời gia tăng và tâm lý thận trọng của nhà đầu tư.",
+        "correct": true
+      },
+      {
+        "text": "Do khối ngoại mua vào mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Do thông tin tích cực từ các doanh nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Do lãi suất giảm mạnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ronaldo nhận thêm kỷ lục Guinness",
+    "content": "Cristiano Ronaldo vừa nhận kỷ lục Guinness về số trận thắng nhiều nhất cấp đội tuyển quốc gia với 133 chiến thắng, sau khi ghi bàn giúp Bồ Đào Nha đánh bại Đan Mạch 5-2 tại tứ kết UEFA Nations League. Kỷ lục trước đó thuộc về Sergio Ramos với 131 chiến thắng. Ronaldo cũng là cầu thủ ghi nhiều bàn thắng nhất trong lịch sử bóng đá quốc tế với 115 bàn cho Bồ Đào Nha và là người có nhiều người theo dõi nhất trên mạng xã hội.",
+    "link": "https://vnexpress.net/ronaldo-nhan-them-ky-luc-guinness-4865024.html",
+    "cat": "the-thao",
+    "positivity": 10,
+    "importance": 9,
+    "question": "Cristiano Ronaldo vừa nhận kỷ lục Guinness nào?",
+    "answers": [
+      {
+        "text": "Số trận thắng cấp đội tuyển quốc gia nhiều nhất",
+        "correct": true
+      },
+      {
+        "text": "Số bàn thắng nhiều nhất lịch sử Champions League",
+        "correct": false
+      },
+      {
+        "text": "Số lần ra sân quốc tế nhiều nhất",
+        "correct": false
+      },
+      {
+        "text": "Số người theo dõi trên mạng xã hội nhiều nhất",
+        "correct": false
+      },
+      {
+        "text": "Số bàn thắng ghi được cho Real Madrid nhiều nhất",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
     "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
     "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
@@ -170,6 +228,37 @@
       },
       {
         "text": "Giữa tháng 1",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ukraine phản công bẻ gọng kìm của Nga siết quanh thành trì chiến lược",
+    "content": "Ukraine đang tiến hành một cuộc phản công tại mặt trận Pokrovsk nhằm phá vỡ gọng kìm của Nga siết quanh thành trì chiến lược này. Sau khi kiểm soát một số khu vực quan trọng, quân đội Ukraine đang tập trung vào việc giành lại Shevchenko, điểm chốt cuối cùng của Nga, để củng cố vị thế của mình. Cuộc chiến đang diễn ra căng thẳng khi cả hai bên đều tăng cường sức mạnh trên chiến trường, với mục tiêu cuối cùng là thay đổi cục diện của cuộc xung đột.",
+    "link": "https://dantri.com.vn/the-gioi/ukraine-phan-cong-be-gong-kim-cua-nga-siet-quanh-thanh-tri-chien-luoc-20250324095037533.htm",
+    "cat": "the-gioi",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Ukraine đang thực hiện phản công ở đâu để bẻ gọng kìm của Nga?",
+    "answers": [
+      {
+        "text": "Mặt trận Pokrovsk",
+        "correct": true
+      },
+      {
+        "text": "Shevchenko",
+        "correct": false
+      },
+      {
+        "text": "Lugansk",
+        "correct": false
+      },
+      {
+        "text": "Donbass",
+        "correct": false
+      },
+      {
+        "text": "Kiev",
         "correct": false
       }
     ]
