--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Những rào cản trong kế hoạch tái vũ trang của châu Âu",
+    "content": "Kế hoạch tái vũ trang trị giá 800 tỷ euro của châu Âu được triển khai hơn 3 năm sau khi cuộc chiến Ukraine bùng nổ, nhằm đối phó với sự giảm cam kết an ninh của Mỹ. Tuy nhiên, châu Âu đang gặp phải nhiều rào cản lớn, bao gồm thiếu nguồn vốn, sự lệ thuộc vào công nghệ và vũ khí của Mỹ, cũng như sự thiếu hợp tác trong lĩnh vực quốc phòng giữa các quốc gia thành viên. Để đạt được tự chủ quốc phòng, châu Âu cần vượt qua nhiều thách thức và thành lập một chiến lược hợp tác đồng bộ hơn.",
+    "link": "https://dantri.com.vn/the-gioi/nhung-rao-can-trong-ke-hoach-tai-vu-trang-cua-chau-au-20250323223324326.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Châu Âu đang gặp phải những rào cản nào trong kế hoạch tái vũ trang của mình?",
+    "answers": [
+      {
+        "text": "Thiếu nguồn vốn và sự lệ thuộc vào công nghệ Mỹ",
+        "correct": true
+      },
+      {
+        "text": "Năng lực quân sự yếu kém",
+        "correct": false
+      },
+      {
+        "text": "Thiếu lãnh đạo trong quân đội",
+        "correct": false
+      },
+      {
+        "text": "Không đủ nhân lực cho quốc phòng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nguyên bí thư Tỉnh ủy Ninh Thuận kiến nghị xử lý dấu hiệu tiêu cực trong đấu giá đất",
     "content": "Ông Trương Xuân Thìn, nguyên bí thư Tỉnh ủy Ninh Thuận, đã kiến nghị các cơ quan chức năng xử lý dấu hiệu tiêu cực trong đấu giá đất tại huyện Ninh Sơn. Ông gửi đơn tố giác liên quan đến thửa đất số 364, cho rằng có dấu hiệu thông thầu và vi phạm pháp luật trong quá trình đấu giá. Ông yêu cầu công khai kết quả xử lý vụ việc để bảo vệ quyền lợi hợp pháp của công dân và Nhà nước.",
     "link": "https://tuoitre.vn/nguyen-bi-thu-tinh-uy-ninh-thuan-kien-nghi-xu-ly-dau-hieu-tieu-cuc-trong-dau-gia-dat-20250323212351476.htm",
@@ -3342,28 +3369,28 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
+    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
+    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
     "answers": [
       {
-        "text": "Bơ, táo, lê, lựu, cam",
+        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
         "correct": true
       },
       {
-        "text": "Chuối, dưa hấu, nho",
+        "text": "Chanh, dưa hấu, xoài",
         "correct": false
       },
       {
-        "text": "Xoài, dứa, kiwi",
+        "text": "Cà chua, khoai tây, hành tây",
         "correct": false
       },
       {
-        "text": "Nho khô, hạt chia, bưởi",
+        "text": "Bông cải xanh, bắp cải, đậu xanh",
         "correct": false
       }
     ]
@@ -3400,28 +3427,28 @@
     ]
   },
   {
-    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
-    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
-    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
     "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
+    "question": "Những loại quả nào giúp giảm cholesterol?",
     "answers": [
       {
-        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
+        "text": "Bơ, táo, lê, lựu, cam",
         "correct": true
       },
       {
-        "text": "Chanh, dưa hấu, xoài",
+        "text": "Chuối, dưa hấu, nho",
         "correct": false
       },
       {
-        "text": "Cà chua, khoai tây, hành tây",
+        "text": "Xoài, dứa, kiwi",
         "correct": false
       },
       {
-        "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -3561,145 +3588,6 @@
       },
       {
         "text": "Năm 2024",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
-    "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
-    "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để giảm hôi miệng hàng ngày?",
-    "answers": [
-      {
-        "text": "Duy trì hệ tiêu hóa khỏe mạnh.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần đánh răng một lần mỗi ngày.",
-        "correct": false
-      },
-      {
-        "text": "Uống nhiều đồ uống có gas.",
-        "correct": false
-      },
-      {
-        "text": "Không cần súc miệng sau khi ăn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
-    "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
-    "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Biến đổi khí hậu có ảnh hưởng gì đến sức khỏe con người?",
-    "answers": [
-      {
-        "text": "Có thể gây bùng phát các bệnh truyền nhiễm như cúm, sởi và sốt xuất huyết.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe con người.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến sức khỏe của động vật.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
-    "answers": [
-      {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây hại về mặt tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
-    "answers": [
-      {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị ung thư phổi có ăn thịt gà được không?",
-    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
-    "answers": [
-      {
-        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
-        "correct": true
-      },
-      {
-        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên ăn thịt gà sống.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
         "correct": false
       }
     ]
